--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# Folders
+/mbed-os
 /BUILD
+/.vscode
+
+# Files
+.mbed
+mbed_settings.py
+mbed_settings.pyc
+mbed-os.lib
+/Documention/verslag.log
+
